went back to the old gradient package, will have to figure out how to minify. Also added gain or loss and portfolio contributions to the front page, everything is currently working

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.11/semantic.min.css"></link>
     <link href="https://fonts.googleapis.com/css?family=Saira+Condensed" rel="stylesheet">
+    <script src="gradient-min.js"></script>
   
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
